mn-grid, mn-grid-header mn-grid-pager
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/start/template.html
+++ b/app/assets/javascripts/app/routes/start/template.html
@@ -1,8 +1,6 @@
 <div>
-  START
-  <table>
-    <tr ng-repeat="item in vm.activities">
-      <td>{{item.departureCityAddress}}</td>
-    </tr>
-  </table>
+  START1
+  <mn-grid-header></mn-grid-header>
+  <mn-grid></mn-grid>
+  <mn-grid-pager></mn-grid-pager>
 </div>
