--- a/app/assets/javascripts/app/routes/activities/template.html
+++ b/app/assets/javascripts/app/routes/activities/template.html
@@ -1,4 +1,6 @@
 <div>
   ACTIVITIES
-  <mn-grid />
+  <mn-grid-header></mn-grid-header>
+  <mn-grid></mn-grid>
+  <mn-grid-pager></mn-grid-pager>
 </div>
