loading first page of activities and ui router page number parameter passing with mn-grid-pager directive
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activities/template.html
+++ b/app/assets/javascripts/app/routes/activities/template.html
@@ -1,6 +1,6 @@
 <div>
-  ACTIVITIES
-  <mn-grid-header></mn-grid-header>
-  <mn-grid></mn-grid>
+  <!-- ACTIVITIES -->
+  <!-- <mn-grid-header></mn-grid-header> -->
+  <mn-grid items="ctrl.items" fields="ctrl.fields"></mn-grid>
   <mn-grid-pager></mn-grid-pager>
 </div>
