mn-grid-pager almost finished
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/start/template.html
+++ b/app/assets/javascripts/app/routes/start/template.html
@@ -1,6 +1,5 @@
 <div>
-  START
-  <mn-grid-header></mn-grid-header>
+  <!-- <mn-grid-header></mn-grid-header> -->
   <mn-grid></mn-grid>
   <mn-grid-pager></mn-grid-pager>
 </div>
