--- a/app/assets/javascripts/app/routes/activities/template.html
+++ b/app/assets/javascripts/app/routes/activities/template.html
@@ -1,6 +1,5 @@
 <div>
-  <!-- ACTIVITIES -->
   <!-- <mn-grid-header></mn-grid-header> -->
   <mn-grid items="ctrl.items" fields="ctrl.fields"></mn-grid>
-  <mn-grid-pager></mn-grid-pager>
+  <mn-grid-pager get-page='ctrl.getPage(page)'></mn-grid-pager>
 </div>
