--- a/app/assets/javascripts/mohican/directives/mnGridPager/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridPager/template.html
@@ -2,22 +2,19 @@
   <div class="col-lg-5">
     <nav class="pointer">
       <ul class="pointer pagination pagination-sm" style="margin: 0px 30px;">
-        <li class="pointer">
-          <a ng-click="vm.goToPage(1)" aria-label="Previous">
-            <span aria-hidden="true">FIRST</span>
-          </a>
-          <a ng-click="vm.goToPage(2)" aria-label="Previous">
-            <span aria-hidden="true">SECOND</span>
+        <li class="pointer" ng-class='{disabled: vm.isFirstPage()}'>
+          <a ng-click="vm.goToPage(vm.prevPage)" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
           </a>
         </li>
-        <!-- <li class="pointer" ng-repeat="page_number in pagination_array()" ng-class="{active: page_number == pageNo}">
-          <a ng-click="goToPage(page_number)">{{showPageNumber(page_number, $index)}}</a>
+        <li class="pointer" ng-repeat="pageNumber in vm.paginationArray()" ng-class="{active: pageNumber == vm.pageNo}">
+          <a ng-click="vm.goToPage(pageNumber)">{{vm.showPageNumber(pageNumber, $index)}}</a>
         </li>
-        <li class="pointer" ng-class="{disabled: is_last_page()}">
-          <a ng-click="goToPage(nextPage)" aria-label="Next">
+        <li class="pointer" ng-class="{disabled: vm.isLastPage()}">
+          <a ng-click="vm.goToPage(vm.nextPage)" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
           </a>
-        </li> -->
+        </li>
       </ul>
     </nav>
   </div>
