pages count passed to mn-grid-pager
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activities/template.html
+++ b/app/assets/javascripts/app/routes/activities/template.html
@@ -1,5 +1,5 @@
 <div>
   <!-- <mn-grid-header></mn-grid-header> -->
   <mn-grid items="ctrl.items" fields="ctrl.fields"></mn-grid>
-  <mn-grid-pager get-page='ctrl.getPage(page)'></mn-grid-pager>
+  <mn-grid-pager get-page='ctrl.getPage(page)' page-count='ctrl.pagesCount'></mn-grid-pager>
 </div>
