--- a/app/assets/javascripts/mohican/directives/mnGridHeader/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridHeader/template.html
@@ -10,7 +10,7 @@
             tick-property="selected"
             default-label="Select layout"
             selection-mode="single"
-            on-item-click="showLayout(data.name)" />
+            on-item-click="vm.layoutChanged(data.name)" />
     </div>
   </div>
 </div>
