--- a/app/assets/javascripts/mohican/directives/mnGridHeader/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridHeader/template.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-10 col-xs-9">
     <div class="page-menu form-inline">
-      <span class="inline-multi-select"
+      <!-- <span class="inline-multi-select"
             multi-select
             input-model="vm.layouts"
             helper-elements=""
@@ -10,7 +10,16 @@
             tick-property="selected"
             default-label="Select layout"
             selection-mode="single"
-            on-item-click="vm.layoutChanged(data.name)" />
+             /> -->
+      <div isteven-multi-select
+           input-model="vm.layouts"
+           on-item-click="vm.layoutChanged({ layout: data.name })"
+           output-model="outputBrowsers"
+           button-label="show"
+           item-label="name desc"
+           tick-property="selected"
+           selection-mode="single">
+      </div>
     </div>
   </div>
 </div>
