--- a/app/assets/javascripts/mohican/directives/mnGridHeader/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridHeader/template.html
@@ -1,25 +1,17 @@
 <div class="row">
   <div class="col-sm-10 col-xs-9">
     <div class="page-menu form-inline">
-      <!-- <span class="inline-multi-select"
-            multi-select
-            input-model="vm.layouts"
-            helper-elements=""
-            button-label="show"
-            item-label="name desc"
-            tick-property="selected"
-            default-label="Select layout"
-            selection-mode="single"
-             /> -->
-      <div isteven-multi-select
-           input-model="vm.layouts"
+      <span isteven-multi-select
+           class="inline-multi-select"
+           input-model="vm.layoutsFix"
            on-item-click="vm.layoutChanged({ layout: data.name })"
-           output-model="outputBrowsers"
+           output-model="vm.outputBrowsers"
            button-label="show"
            item-label="name desc"
            tick-property="selected"
-           selection-mode="single">
-      </div>
+           selection-mode="single"
+           helper-elements="">
+      </span>
     </div>
   </div>
 </div>
