--- a/app/assets/javascripts/app/directives/id5AppHeader/template.html
+++ b/app/assets/javascripts/app/directives/id5AppHeader/template.html
@@ -10,50 +10,50 @@
   <mn-navbar-collapsible>
     <mn-navbar-collapsible-left>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.start">{{vm.appHeaderTranslations.start.fn}}</mn-menu-item-route>
+        <mn-menu-item-route sref="base.start">{{vm.t('Start')}}</mn-menu-item-route>
       </mn-menu-item>
-      <mn-menu-group mn-text="{{vm.appHeaderTranslations.deliveryAndTransitionGroupTitle.fn}}">
+      <mn-menu-group mn-text="{{vm.t('Deliveries and Transitions')}}">
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.deliveries">{{vm.appHeaderTranslations.deliveries.fn}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.deliveries">{{vm.t('Deliveries')}}</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.activities">{{vm.appHeaderTranslations.activities.fn}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.activities">{{vm.t('Activities')}}</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.routes">{{vm.appHeaderTranslations.routes.fn}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.routes">{{vm.t('Routes')}}</mn-menu-item-route>
         </mn-menu-group-item>
       </mn-menu-group>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.design">{{vm.appHeaderTranslations.design.fn}}</mn-menu-item-route>
+        <mn-menu-item-route sref="base.design">{{vm.t('Design')}}</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.map">{{vm.appHeaderTranslations.map.fn}}</mn-menu-item-route>
+        <mn-menu-item-route sref="base.map">{{vm.t('Map')}}</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.history">{{vm.appHeaderTranslations.history.fn}}</mn-menu-item-route>
+        <mn-menu-item-route sref="base.history">{{vm.t('History')}}</mn-menu-item-route>
       </mn-menu-item>
-      <mn-menu-group mn-text="{{vm.appHeaderTranslations.resourcesGroupTitle.fn}}">
+      <mn-menu-group mn-text="{{vm.t('Resources')}}">
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.resources">{{vm.appHeaderTranslations.resources.fn}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.resources">{{vm.t('Resources')}}</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.timetables">{{vm.appHeaderTranslations.timetables.fn}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.timetables">{{vm.t('Timetables')}}</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.links">{{vm.appHeaderTranslations.links.fn}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.links">{{vm.t('Links')}}</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.groups">{{vm.appHeaderTranslations.groups.fn}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.groups">{{vm.t('Groups')}}</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.hoursReports">{{vm.appHeaderTranslations.hoursReports.fn}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.hoursReports">{{vm.t('Hours Reports')}}</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.hoursAccounting">{{vm.appHeaderTranslations.hoursAccounting.fn}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.hoursAccounting">{{vm.t('Hours Accounting')}}</mn-menu-item-route>
         </mn-menu-group-item>
       </mn-menu-group>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.customers">{{vm.appHeaderTranslations.customers.fn}}</mn-menu-item-route>
+        <mn-menu-item-route sref="base.customers">{{vm.t('Customers')}}</mn-menu-item-route>
       </mn-menu-item>
     </mn-navbar-collapsible-left>
     <mn-navbar-collapsible-right>
