--- a/app/assets/javascripts/app/directives/id5AppHeader/template.html
+++ b/app/assets/javascripts/app/directives/id5AppHeader/template.html
@@ -12,7 +12,7 @@
       <mn-menu-item>
         <mn-menu-item-route sref="base.start">{{vm.t('Start')}}</mn-menu-item-route>
       </mn-menu-item>
-      <mn-menu-group mn-text="{{t('Deliveries and Transitions')}}">
+      <mn-menu-group mn-text="Deliveries and Transitions">
         <mn-menu-group-item>
           <mn-menu-item-route sref="base.deliveries">{{vm.t('Deliveries')}}</mn-menu-item-route>
         </mn-menu-group-item>
@@ -32,7 +32,7 @@
       <mn-menu-item>
         <mn-menu-item-route sref="base.history">{{vm.t('History')}}</mn-menu-item-route>
       </mn-menu-item>
-      <mn-menu-group mn-text="{{vm.t('Resources')}}">
+      <mn-menu-group mn-text="Resources">
         <mn-menu-group-item>
           <mn-menu-item-route sref="base.resources">{{vm.t('Resources')}}</mn-menu-item-route>
         </mn-menu-group-item>
