step 4: complete step 3 also for transcluded text
This is the same thing, but as transcluded test is treated as
an array of elements (but we know it is just text), we need a
little bit different (and more fucked up) approach.

But this gives us a chance to learn how the transclusion can be
modified. Because of that fifth parameter to the link function I
have decided to use Angular for UI wherever, whenever. Using that
I can implement my own little local webkit!

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/directives/id5AppHeader/template.html
+++ b/app/assets/javascripts/app/directives/id5AppHeader/template.html
@@ -10,50 +10,50 @@
   <mn-navbar-collapsible>
     <mn-navbar-collapsible-left>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.start">{{vm.t('Start')}}</mn-menu-item-route>
+        <mn-menu-item-route sref="base.start">Start</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-group mn-text="Deliveries and Transitions">
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.deliveries">{{vm.t('Deliveries')}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.deliveries">Deliveries</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.activities">{{vm.t('Activities')}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.activities">Activities</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.routes">{{vm.t('Routes')}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.routes">Routes</mn-menu-item-route>
         </mn-menu-group-item>
       </mn-menu-group>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.design">{{vm.t('Design')}}</mn-menu-item-route>
+        <mn-menu-item-route sref="base.design">Design</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.map">{{vm.t('Map')}}</mn-menu-item-route>
+        <mn-menu-item-route sref="base.map">Map</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.history">{{vm.t('History')}}</mn-menu-item-route>
+        <mn-menu-item-route sref="base.history">History</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-group mn-text="Resources">
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.resources">{{vm.t('Resources')}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.resources">Resources</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.timetables">{{vm.t('Timetables')}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.timetables">Timetables</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.links">{{vm.t('Links')}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.links">Links</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.groups">{{vm.t('Groups')}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.groups">Groups</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.hoursReports">{{vm.t('Hours Reports')}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.hoursReports">Hours Reports</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.hoursAccounting">{{vm.t('Hours Accounting')}}</mn-menu-item-route>
+          <mn-menu-item-route sref="base.hoursAccounting">Hours Accounting</mn-menu-item-route>
         </mn-menu-group-item>
       </mn-menu-group>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.customers">{{vm.t('Customers')}}</mn-menu-item-route>
+        <mn-menu-item-route sref="base.customers">Customers</mn-menu-item-route>
       </mn-menu-item>
     </mn-navbar-collapsible-left>
     <mn-navbar-collapsible-right>
