--- a/app/assets/javascripts/app/directives/id5AppHeader/template.html
+++ b/app/assets/javascripts/app/directives/id5AppHeader/template.html
@@ -10,50 +10,50 @@
   <mn-navbar-collapsible>
     <mn-navbar-collapsible-left>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.start">Start</mn-menu-item-route>
+        <mn-menu-item-route>Start</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-group mn-text="Deliveries and Transitions">
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.deliveries">Deliveries</mn-menu-item-route>
+          <mn-menu-item-route>Deliveries</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.activities">Activities</mn-menu-item-route>
+          <mn-menu-item-route>Activities</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.routes">Routes</mn-menu-item-route>
+          <mn-menu-item-route>Routes</mn-menu-item-route>
         </mn-menu-group-item>
       </mn-menu-group>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.design">Design</mn-menu-item-route>
+        <mn-menu-item-route>Design</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.map">Map</mn-menu-item-route>
+        <mn-menu-item-route>Map</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.history">History</mn-menu-item-route>
+        <mn-menu-item-route>History</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-group mn-text="Resources">
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.resources">Resources</mn-menu-item-route>
+          <mn-menu-item-route>Resources</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.timetables">Timetables</mn-menu-item-route>
+          <mn-menu-item-route>Timetables</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.links">Links</mn-menu-item-route>
+          <mn-menu-item-route>Links</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.groups">Groups</mn-menu-item-route>
+          <mn-menu-item-route>Groups</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.hoursReports">Hours Reports</mn-menu-item-route>
+          <mn-menu-item-route sref="hoursReports">Hours Reports</mn-menu-item-route>
         </mn-menu-group-item>
         <mn-menu-group-item>
-          <mn-menu-item-route sref="base.hoursAccounting">Hours Accounting</mn-menu-item-route>
+          <mn-menu-item-route sref="hoursAccounting">Hours Accounting</mn-menu-item-route>
         </mn-menu-group-item>
       </mn-menu-group>
       <mn-menu-item>
-        <mn-menu-item-route sref="base.customers">Customers</mn-menu-item-route>
+        <mn-menu-item-route>Customers</mn-menu-item-route>
       </mn-menu-item>
     </mn-navbar-collapsible-left>
     <mn-navbar-collapsible-right>
