new routes structure
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/directives/id5AppHeader/template.html
+++ b/app/assets/javascripts/app/directives/id5AppHeader/template.html
@@ -24,7 +24,7 @@
         </mn-menu-group-item>
       </mn-menu-group>
       <mn-menu-item>
-        <mn-menu-item-route>Design</mn-menu-item-route>
+        <mn-menu-item-route>Plan</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-item>
         <mn-menu-item-route>Map</mn-menu-item-route>
