fill hate (sic): solving the jumpy footer
This commit only temporarily fixes the footer that jumps. The problem
was in the offset that it is given, which for some reason is based
on some element whose top actually moves for some reason.

This is only part of the problem, as there is at least fillHeight and
fullHeight, and only one should exist, plus it seems neither is done well.

In addition, while the first documents are being loaded, pager
shows only << and >>, which is a bit silly, so that is changed too.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mnGridPager/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridPager/template.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row pager-row" ng-class='{hidden: !vm.pagesCount}'>
   <div class="col-lg-5">
     <nav class="pointer">
       <ul class="pointer pagination pagination-sm" style="margin: 0px 30px;">
@@ -10,7 +10,7 @@
         <li class="pointer" ng-repeat="pageNumber in vm.paginationArray()" ng-class="{active: pageNumber == vm.currentPage}">
           <a ng-click="vm._changePage(pageNumber)">{{vm.showPageNumber(pageNumber, $index)}}</a>
         </li>
-        <li class="pointer" ng-class="{disabled: vm.currentPage == vm.pagesCount}">
+        <li class="pointer" ng-class="{disabled: vm.currentPage == vm.pagesCount, hidden: !vm.pagesCount}">
           <a ng-click="vm._changePage(vm.nextPage)" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
           </a>
