all routes controllers nasted from mnBaseController
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/groupsGrid.html
+++ b/app/assets/javascripts/app/routes/groupsGrid.html
@@ -1,10 +1,3 @@
 <div>
-  {{ctrl.echo('groups')}}
-  <table>
-    <tr ng-repeat="rez in ctrl.collection">
-      <td>
-        {{rez.departureCityAddress}}
-      </td>
-    </tr>
-  </table>
+  groups
 </div>
