--- a/app/assets/javascripts/app/routes/linksGrid.html
+++ b/app/assets/javascripts/app/routes/linksGrid.html
@@ -1,10 +1,3 @@
 <div>
-  {{ctrl.echo('links')}}
-  <table>
-    <tr ng-repeat="rez in ctrl.collection">
-      <td>
-        {{rez.departureCityAddress}}
-      </td>
-    </tr>
-  </table>
+  links
 </div>
