--- a/app/assets/javascripts/app/routes/planGrid.html
+++ b/app/assets/javascripts/app/routes/planGrid.html
@@ -1,10 +1,3 @@
 <div>
-  {{ctrl.echo('plan')}}
-  <table>
-    <tr ng-repeat="rez in ctrl.collection">
-      <td>
-        {{rez.departureCityAddress}}
-      </td>
-    </tr>
-  </table>
+  plan
 </div>
