quick sort - order column
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnGridHeader/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridHeader/template.html
@@ -3,7 +3,7 @@
     <div class="page-menu form-inline">
       <span isteven-multi-select
            class="inline-multi-select"
-           input-model="vm.layoutsFix"
+           input-model="vm.layouts"
            on-item-click="vm.layoutChanged({ layout: data.name })"
            output-model="vm.outputBrowsers"
            button-label="show"
