--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -1,5 +1,5 @@
 <div>
   <mn-grid-header layout-changed='ctrl.getLayout(layout)' layouts='ctrl.layouts'></mn-grid-header>
-  <mn-grid items="ctrl.items" fields="ctrl.fields"></mn-grid>
+  <mn-grid items="ctrl.items" fields="ctrl.fields" order-changed='ctrl.getOrder(column)'></mn-grid>
   <mn-grid-pager page-changed='ctrl.getPage(page)' pages-count='ctrl.pagesCount' current-page='ctrl.page'></mn-grid-pager>
 </div>
