--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -2,7 +2,7 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th ng-repeat="field in vm.fields" ng-style="{width: field.ColumnWidth + 'px'}">{{field.HeaderText}}</th>
+        <th ng-repeat="field in vm.fields" ng-click="vm.orderChanged({column: field.Name})" ng-style="{width: field.ColumnWidth + 'px'}">{{field.HeaderText}}</th>
       </tr>
     </thead>
     <tr ng-repeat="item in vm.items">
