--- a/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
+++ b/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
@@ -12,6 +12,14 @@
            selection-mode="single"
            helper-elements="">
       </span>
+      <button type="button"
+              class="btn filter-bar-button"
+              ng-model="vm.quickFilterShown"
+              btn-checkbox
+              btn-checkbox-true="1"
+              btn-checkbox-false="0">
+        Quick Filter
+      </button>
     </div>
   </div>
 </div>
