quick filter - enable push button after fully loaded data
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -1,7 +1,8 @@
 <div>
   <mn-filter-bar layout-changed='ctrl.getLayout(layout)'
                  layouts='ctrl.layouts'
-                 quick-filter-shown='ctrl.quickFilterShown'>
+                 quick-filter-shown='ctrl.quickFilterShown'
+                 service-data-loaded='ctrl.serviceDataLoaded'>
   </mn-filter-bar>
   <mn-grid items="ctrl.items"
            fields="ctrl.fields"
