fix: remove unnecessarycolumn header, asc first
there was accitendally pasted orderColumn param value in column header.

always sort asc first if new column header is clicked

Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -6,9 +6,9 @@
             ng-class="{'mn-sortable': vm.serviceDataLoaded}"
             ng-click="vm.orderBy(field.Name)"
             ng-style="{width: field.ColumnWidth + 'px'}">
-          {{field.HeaderText}}{{vm.orderColumn}}
+          {{field.HeaderText}}
           <span ng-show="vm.orderColumn === field.Name && vm.serviceDataLoaded"
-                class="pull-right {{vm.orderDirection === 'asc' ? 'glyphicon glyphicon-arrow-down' : 'glyphicon glyphicon-arrow-up'}}"
+                class="pull-right {{vm.orderDirection === 'desc' ? 'glyphicon glyphicon-arrow-up' : 'glyphicon glyphicon-arrow-down'}}"
                 aria-hidden="true"></span>
         </th>
       </tr>
