track quickfilter state in url
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -2,6 +2,7 @@
   <mn-filter-bar layout-changed='ctrl.getLayout(layout)'
                  layouts='ctrl.layouts'
                  quick-filter-shown='ctrl.quickFilterShown'
+                 quick-filter-toggled='ctrl.toggleQuickFilter(opened)'
                  service-data-loaded='ctrl.serviceDataLoaded'>
   </mn-filter-bar>
   <mn-grid items="ctrl.items"
