mocked frontend filter
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -9,7 +9,8 @@
            fields="ctrl.fields"
            order-column="ctrl.column"
            order-direction="ctrl.direction"
-           order-changed='ctrl.getOrder(column, direction)'
+           order-changed='ctrl.getView(column, direction, filters)'
+           filter-changed='ctrl.getView(column, direction, filters)'
            quick-filter-shown='ctrl.quickFilterShown'
            service-data-loaded='ctrl.serviceDataLoaded'>
   </mn-grid>
