--- a/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
+++ b/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
@@ -17,8 +17,8 @@
               ng-model="filterBar.quickFilterShown"
               ng-click="filterBar.quickFilterToggled({ opened: !filterBar.quickFilterShown })"
               btn-checkbox
-              btn-checkbox-true="1"
-              btn-checkbox-false="0"
+              btn-checkbox-true="true"
+              btn-checkbox-false="false"
               ng-disabled="!filterBar.serviceDataLoaded">
         Quick Filter
       </button>
