--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -2,25 +2,25 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th ng-repeat="field in vm.fields"
-            ng-class="{'mn-sortable': vm.serviceDataLoaded}"
-            ng-click="vm.orderBy(field.Name)"
+        <th ng-repeat="field in grid.fields"
+            ng-class="{'mn-sortable': grid.serviceDataLoaded}"
+            ng-click="grid.orderBy(field.Name)"
             ng-style="{width: field.ColumnWidth + 'px'}">
           {{field.HeaderText}}
-          <span ng-show="vm.orderColumn === field.Name && vm.serviceDataLoaded"
-                class="pull-right {{vm.orderDirection === 'desc' ? 'glyphicon glyphicon-arrow-up' : 'glyphicon glyphicon-arrow-down'}}"
+          <span ng-show="grid.orderColumn === field.Name && grid.serviceDataLoaded"
+                class="pull-right {{grid.orderDirection === 'desc' ? 'glyphicon glyphicon-arrow-up' : 'glyphicon glyphicon-arrow-down'}}"
                 aria-hidden="true"></span>
         </th>
       </tr>
-      <tr ng-show="vm.quickFilterShown">
-        <th ng-repeat="field in vm.fields">
-          <input type="text" name="name" value="" ng-style="{width: (field.ColumnWidth - 20) + 'px'}" />
+      <tr ng-show="grid.quickFilterShown">
+        <th ng-repeat="field in grid.fields">
+          <input type="text" name="name" value="" ng-model="grid[field.Name]" ng-change="grid.filterBy(field.Name)" ng-style="{width: (field.ColumnWidth - 20) + 'px'}" />
         </th>
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="item in vm.items">
-        <td ng-repeat="field in vm.fields">{{item[field.Name]}}</td>
+      <tr ng-repeat="item in grid.items">
+        <td ng-repeat="field in grid.fields">{{item[field.Name]}}</td>
       </tr>
     </tbody>
   </table>
