tracking clinet side filters in url
Currently we do not handle quick filter focus state after url is changed. For testing purposes you can try to paste full value in quick filter filed or manually focus it.

Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -9,8 +9,9 @@
            fields="ctrl.fields"
            order-column="ctrl.column"
            order-direction="ctrl.direction"
-           order-changed='ctrl.getView(column, direction, filters)'
-           filter-changed='ctrl.getView(column, direction, filters)'
+           filters="ctrl.filters"
+           client-view-changed='ctrl.getView(column, direction, filters)'
+           client-view-changed='ctrl.getView(column, direction, filters)'
            quick-filter-shown='ctrl.quickFilterShown'
            service-data-loaded='ctrl.serviceDataLoaded'>
   </mn-grid>
