--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -14,7 +14,7 @@
       </tr>
       <tr ng-show="grid.quickFilterShown">
         <th ng-repeat="field in grid.fields">
-          <input type="text" name="name" value="" ng-model="grid.filters[field.name]" ng-change="grid.filterBy()" ng-style="{width: (field.width - 20) + 'px'}" />
+          <input type="text" name="name" value="" ng-model="grid.filters[field.name]" ng-change="grid.filterBy(field.name)" ng-style="{width: (field.width - 20) + 'px'}" />
         </th>
       </tr>
     </thead>
